// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`"data" can be used to specify resource data 1`] = `
[
  {
    "apiVersion": "v1",
    "data": {
      "boom": 123,
    },
    "kind": "ResourceType",
    "metadata": {
      "name": "test-c8c5facf",
    },
  },
]
`;

exports[`"spec" is synthesized as-is 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "ResourceType",
    "metadata": {
      "name": "test-c8c5facf",
    },
    "spec": {
      "prop1": "hello",
      "prop2": {
        "world": 123,
      },
    },
  },
]
`;

exports[`if name is explicitly specified it will be respected 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": {
      "name": "boom",
    },
  },
]
`;

exports[`minimal configuration 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": {
      "name": "test-my-c8487bf7",
    },
  },
]
`;

exports[`printed yaml is alphabetical 1`] = `
"[
  {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": {
      "meta": {
        "aaa": 123,
        "zzz": "hello"
      },
      "name": "test-my-c8487bf7"
    },
    "spec": {
      "firstProperty": "hello",
      "secondProperty": {
        "beforeThirdProperty": "world",
        "innerThirdProperty": "!"
      }
    }
  }
]"
`;

exports[`synthesized resource name is based on path 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": {
      "name": "test-my-c8487bf7",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "MyResource",
    "metadata": {
      "name": "test-scope-my-c8fafaf7",
    },
  },
]
`;
